...
            ("Lunch", 550),
            ("Dinner", 650),
            ("Small Meal", 400)
        ],
        "Snacks": [
            ("Apple", 95),
            ("Banana", 105),
            ("Protein Bar", 200),
            ("Nuts", 170)
        ],
        "Drinks": [
            ("Coffee", 5),
            ("Protein Shake", 150),
...
